welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:4: error: Missing closing brace `}' assumed here
def marquage(c:Color)
^FlowerCase:5: error: expected class or object definition
{setCouleurBrosse(c);baisseBrosse();leveBrosse()	
^FlowerCase:8: error: expected class or object definition
def fleur(c:Color)
^FlowerCase:9: error: expected class or object definition
{marquage(c); droite(); avance(); gauche();avance(); marquage(c); avance()
^FlowerCase:14: error: expected class or object definition
def growFlowers(){
^